<resources>
    <string name="app_name">나나공</string>

    <string name="category">카테고리</string>
    <string name="category_hint">카테고리 힌트</string>
    <string name="update_lesson">강의 정보 수정</string>
    <string name="register_account_info">계정 정보 등록</string>

    <string name="welcome">환영합니다!</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_hint">나나공에서 사용하실 닉네임을 입력해주세요</string>

    <string name="menu_today">투데이</string>
    <string name="menu_class">강의목록</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="caution">caution</string>

    <string name="right_arrow">right arrow</string>
    <string name="wait_dialog_message">아직 준비중인 기능이에요</string>
    <string name="dialog_default_message">안내 메세지</string>
    <string name="expired_dialog_message">다시 로그인 해주세요</string>
    <string name="privacy">개인정보 처리방침</string>
    <string name="lesson_close">마감</string>
    <string name="d_day">D-Day</string>
    <string name="accept">수락하기</string>
    <string name="lesson_update">수정하기</string>
    <string name="lesson_start_date_caution">(생성 후 시작일 변경 불가능)</string>
    <string name="alert_days">푸시 알림 주기</string>
    <string name="alert_days_info">월, 수, 목</string>
    <string name="cannot_update">*수정불가</string>
    <string name="one_hundred_percent">100%</string>

    <string name="input_lesson_count">%1$s개</string>
    <string name="input_lesson_price">%1$s원</string>
    <string name="lesson_count_unit"> &#160;%1$s개</string>

    <string name="current_lesson_progress">&#160;%d개 중 %d개</string>

    <string name="d_day_plus_format">D+%d</string>
    <string name="d_day_minus_format">D-%d</string>

    <string name="lesson_end_date_info">&#160;%s</string>
    <string name="lesson_period_info">&#160;%s - %s</string>

    <string name="unit_lesson_number">%d강</string>
    <string name="unit_lesson_take_rate">%d%%</string>
    <string name="unit_lesson_total_number">%d개</string>
    <string name="unit_lesson_price">%s원</string>
    <string name="register_lesson">강의 등록하기</string>
    <string name="finish_lesson">완강하기</string>
    <string name="finish_lesson_dialog_message">모든 강의를 다 들으셨나요?</string>
    <string name="finish_lesson_dialog_check">완강했어요</string>
    <string name="cannot_get_lesson_category">강의 카테고리를 가져오지 못했어요</string>
    <string name="cannot_get_lesson_site">강의 사이트를 가져오지 못했어요</string>
    <string name="logout_complete">로그아웃 되었어요</string>
    <string name="withdrawal_complete">회원탈퇴 되었어요</string>
    <string name="input_same_nickname">현재 닉네임과 동일한 닉네임이에요</string>
    <string name="logout_fail">로그아웃 하지 못했어요</string>
    <string name="logout_fail_by_internet_error">로그아웃 하지 못했어요\n인터넷 연결을 확인해주세요</string>
    <string name="member_update_fail">회원 정보를 변경하지 못했어요</string>
    <string name="member_update_fail_by_internet_error">회원 정보를 변경하지 못했어요\n인터넷 연결을 확인해주세요 </string>
    <string name="member_update_success">닉네임이 변경되었어요</string>
    <string name="member_fetch_fail">회원 정보를 가져오지 못했어요</string>
    <string name="lesson_fetch_fail">강의 정보를 가져오지 못했어요</string>
    <string name="please_login_again">다시 로그인 해주세요</string>
    <string name="lesson_update_fail">강의를 수정하지 못했어요</string>
    <string name="lesson_update_fail_by_internet_error">강의를 수정하지 못했어요\n인터넷 연결을 확인해주세요</string>
    <string name="lesson_finish_complete">강의를 완강하였어요</string>
    <string name="lesson_finish_fail">강의를 완강하지 못했어요</string>
    <string name="lesson_finish_fail_by_internet_error">강의를 완강하지 못했어요\n인터넷 연결을 확인해주세요</string>
    <string name="lesson_delete_complete">강의가 삭제 되었어요</string>
    <string name="lesson_delete_fail">강의를 삭제하지 못했어요</string>
    <string name="lesson_delete_fail_by_internet">강의를 삭제하지 못했어요\n인터넷 연결을 확인해주세요</string>
    <string name="lesson_register_complete">강의가 등록되었어요</string>
    <string name="lesson_register_fail">강의 등록을 실패했어요</string>
    <string name="lesson_register_fail_by_internet_error">강의 등록을 실패했어요\n인터넷 연결을 확인해주세요</string>
    <string name="fcm_token_save_fail">fcm 토큰을 저장하지 못했어요</string>
    <string name="lesson_update_complete">강의가 수정되었어요</string>
    <string name="lesson_category_fetch_fail">강의 카테고리를 가져오지 못했어요</string>
    <string name="lesson_site_fetch_fail">강의 사이트를 가져오지 못했어요</string>
    <string name="lesson_number_validation_error">강의 개수가 수강한 강의 개수보다 적어요</string>
    <string name="push_noti">푸시 알림</string>
    <string name="please_push_noti_on">알림을 받는 회원들이\n나무늘보를 많이 이기고 있어요!</string>
    <string name="check_internet_connection">인터넷 연결을 확인해주세요</string>
    <string name="refresh">새로 고침</string>
    <string name="noti_update_fail">알림 수신 여부를 변경하지 못했어요</string>
    <string name="noti_update_fail_by_internet_error">알림 수신 여부를 변경하지 못했어요\n인터넷 연결을 확인해주세요 </string>
    <string name="noti_update_complete">알림 수신 여부가 변경되었어요</string>

    <string name="error_message">문제가 발생했어요</string>
    <string name="lesson_detail_info_fail">강의 상세 정보를 가져오지 못했어요</string>
    <string name="network_error">인터넷이 연결되어 있지 않아요</string>
    <string name="retry">연결 후 다시 실행해주세요</string>
    <string name="retry_btn_text">다시 연결하기</string>
    <string name="menu_notification_list">알림 목록</string>
    <string name="menu_register_lesson">강의 등록</string>
    <string name="previous_member_name">이전 유저 닉네임</string>
    <string name="login_fail">로그인을 실패했어요</string>
    <string name="login_fail_by_internet_error">로그인을 실패했어요\n인터넷 연결을 확인해주세요</string>
    <string name="please_check_internet">인터넷 연결을 확인해주세요</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tutorial">튜토리얼</string>
    <string name="past">PAST</string>

    <!--    login-->
    <string name="title_main"><font color="#53E183">나</font>보다<font color="#53E183"> 나</font>무늘보가\n<font color="#53E183">공</font>부 열심히 한다</string>
    <string name="title_sub"><font color="#565656">나무늘보도 못 이기나요?</font></string>
    <string name="choose_login_method">로그인 방법 선택</string>
    <string name="agree_and_start">동의하고 시작하기</string>
    <string name="login_google">구글 아이디로 로그인</string>
    <string name="login_kakao">카카오 아이디로 로그인</string>
    <string name="register_title"><font color="#000000">나나공을 이용하시려면\n개인정보 동의가 필요해요</font></string>
    <string name="register_policy"><u><font color="#ABABAB">‘나나공’ 서비스 개인정보 처리 방침</font></u></string>
    <string name="sloth_policy">\'나나공\' 서비스 개인정보처리방침</string>
    <string name="start_sloth">나나공 시작하기</string>
    <string name="ic_login_sloth">login_sloth_icon</string>
    <string name="check">확인</string>

    <!--    TodayLesson-->
    <string name="today_lesson_title_empty_lesson">아래 버튼을 눌러 강의를 등록해주세요</string>
    <string name="today_lesson_title_finished_lesson">오늘까지 완료한 강의</string>
    <string name="today_lesson_title_doing_lesson">오늘까지 들어야하는 강의</string>

    <string name="today_lesson_header_empty">등록되어 있는\n강의가 없네요!</string>
    <string name="today_lesson_header_doing">짜란~오늘은\n내가 너보다 더\n부지런했답니다?</string>
    <string name="today_lesson_header_not_start">시작이 반인데…\n너 설마 아직도\n시작 안했어?</string>
    <string name="today_lesson_header_finished">젠장..\n오늘은\n나의 완패다..</string>

    <string name="lesson_update_count_fail">강의를 갱신하지 못했어요</string>
    <string name="lesson_update_count_fail_by_internet_error">강의를 갱신하지 못했어요\n인터넷 연결을 확인해 주세요</string>

    <!--    OnBoardingTodayLesson-->
    <string name="today_lesson_header_on_boarding_empty">등록되어 있는\n강의가 없네요!</string>
    <string name="today_lesson_header_on_boarding_start">"어서와\n나랑 대결은\n처음이지?"</string>
    <string name="today_lesson_header_on_boarding_finished">"크윽..\n처음치고 굉장히\n잘하는데"</string>

    <!--    LessonList-->
    <string name="lesson_list_title_not_register">등록되어 있는 강의가 없네요?</string>
    <string name="lesson_list_title_current_lesson">진행중인 강의</string>
    <string name="lesson_list_title_plan_lesson">예정된 강의</string>
    <string name="lesson_list_title_past_lesson">지난 강의</string>

    <!--    RegisterLesson-->
    <string name="register_new_lesson">새로운 인강 등록</string>
    <string name="setup_lecture">어떤 강의를 들으시나요?</string>
    <string name="lesson_name">강의 이름</string>
    <string name="enter_lesson_name">수강할 강의 이름을 입력해 주세요</string>
    <string name="lesson_count">강의 개수</string>
    <string name="enter_lesson_count">강의 개수를 입력해 주세요</string>
    <string name="lesson_category">카테고리</string>
    <string name="choose_lesson_category">강의 카테고리를 선택해 주세요</string>
    <string name="lesson_site">강의 사이트</string>
    <string name="choose_lesson_site">강의 사이트를 선택해 주세요</string>
    <string name="setup_goal">완강 목표를 설정해 보세요!</string>
    <string name="lesson_start_date">강의 시작일</string>
    <string name="lesson_finish_date">완강 목표일</string>
    <string name="enter_lesson_price">강의 금액을 입력해 주세요</string>
    <string name="lesson_price">강의 금액</string>
    <string name="alert_cycle">푸시 알람 주기</string>
    <string name="lesson_date_range_validation_error">"강의 시작일은 완강 목표일 이전이어야 해요"</string>
    <string name="max_30">최대 30자 까지 입력 가능합니다</string>
    <string name="lesson_message">각오 한마디(선택)</string>
    <string name="next">다음</string>
    <string name="finish">완료</string>

    <!--    LessonDetail-->
    <string name="update">수정</string>
    <string name="lesson_info">강의 정보</string>
    <string name="lesson_price_info">250,000원</string>
    <string name="lesson_period_date_info">2021.10.24 – 2021.12.24</string>
    <string name="lesson_detail_message">각오 한마디</string>
    <string name="lesson_message_info">완강까지 열심히 달려보자!</string>
    <string name="lesson_goal_date_info">2021. 12. 24</string>
    <string name="lesson_present_number_info">24개 중 10개</string>
    <string name="d_remain_day">D-19</string>
    <string name="lesson_period">수강 기간</string>
    <string name="lesson_count_info">24강</string>
    <string name="lesson_name_info">프로그래밍 시작하기 : 파이썬 입문(Inflearn Original)</string>
    <string name="mission_fail">목표를 채우지\n못했어요!</string>
    <string name="mission_success">꾸준히 듣고\n있는 중이에요!</string>
    <string name="waste_money">현재 내가 날린 돈</string>
    <string name="waste_money_info">50,000원</string>
    <string name="lesson_warning">마감 임박</string>
    <string name="lesson_progress">강의 진행률</string>
    <string name="lesson_detail_goal_date">목표 완강일:</string>
    <string name="lesson_register_goal_date">완강 목표일</string>
    <string name="lesson_present_number">내가 들은 강의:</string>
    <string name="lesson_current_progress">현재 진행률</string>
    <string name="lesson_goal_progress">목표 진행률</string>
    <string name="sloth_image">sloth_image</string>
    <string name="detail_lesson_summray_win">꾸준히 듣고 있는 중이에요!</string>
    <string name="detail_lesson_summary_lose">목표를 채우지 못했어요!</string>
    <string name="not_started_yet">결투를 기다리고\n있다구!</string>
    <string name="delete_lesson_dialog_message">한층 성장할 기회, 정말 포기할거야?</string>
    <string name="delete_lesson_dialog_check">포기하기</string>

    <!--    Manage-->
    <string name="setting">설정</string>
    <string name="profile_name">이름</string>
    <string name="profile_email">xxx@gmail.com</string>
    <string name="member_name">이름</string>
    <string name="profile_image">profileImage</string>
    <string name="logout_dialog_message">정말 로그아웃 하시겠습니까?</string>
    <string name="withdraw_dialog_message">회원을 탈퇴하시겠습니까?</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="logout">로그아웃</string>
    <string name="contact">문의사항</string>
    <string name="sloth_official_mail">official04nanagong@gmail.com</string>
    <string name="contact_email_subject">[Android]나나공 1:1 문의</string>
    <string name="notification_list_fetch_fail">알림 목록을 가져오지 못했어요</string>
    <string name="notification_list_update_fail">알림 목록을 갱신하지 못했어요</string>
    <string name="notification_list_update_fail_by_internet_error">알림 목록을 갱신하지 못했어요\n인터넷 연결을 확인해 주세요</string>
    <string name="notification">알림</string>


</resources>