<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="312dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_rounded">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_dialog_state"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/caution"
        android:src="@drawable/ic_caution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_default_message"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_dialog_state" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_delete_rounded_gray"
        android:text="@string/cancel"
        android:textColor="@color/gray_500"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_dialog_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dialog_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_delete_rounded_caution"
        android:text="@string/check"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/btn_dialog_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>