<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.depromeet.sloth.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_bottom_rounded_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:lineSpacingExtra="5dp"
            android:paddingTop="36dp"
            android:onClick="@{() -> vm.navigateToSlothPolicyWebview()}"
            android:text="@string/register_title"
            android:textSize="24dp"
            android:textStyle="bold"
            android:translationY="-2.4sp"
            app:layout_constraintBottom_toTopOf="@id/tv_login_policy_sloth"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_login_policy_sloth"
            android:layout_width="216dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="48dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/register_policy"
            app:layout_constraintBottom_toTopOf="@id/btn_login_policy_cancel"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_policy_cancel"
            style="@style/Widget.Sloth.Button.Cancel"
            android:layout_width="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/cancel"
            android:onClick="@{() -> vm.registerCancel()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_login_policy_agree"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_policy_agree"
            style="@style/Widget.Sloth.Button.Start"
            android:layout_marginHorizontal="16dp"
            android:layout_width="0dp"
            android:layout_marginBottom="24dp"
            android:text="@string/agree_and_start"
            android:onClick="@{() -> vm.registerAgree()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_login_policy_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>