<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.depromeet.sloth.presentation.ui.manage.ManageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="312dp"
        android:layout_height="202dp"
        android:layout_gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_dialog_state"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="27dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/caution"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:srcCompat="@drawable/ic_caution_error" />

        <TextView
            android:id="@+id/tv_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/logout_dialog_message"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_dialog_state" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_cancel"
            style="@style/Widget.Sloth.Button.DialogCancel"
            onSingleClick="@{()-> vm.navigateToManage()}"
            android:layout_marginStart="24dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="24dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_dialog_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_message" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_check"
            style="@style/Widget.Sloth.Button.DialogCheck"
            onSingleClick="@{()-> vm.logout()}"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_dialog_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>